--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -385,9 +385,11 @@ h6 {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+
 #hero {
   width: 100%;
-  height: 80vh;
+  height: 100vh;
+
   background: #37517e;
 }
 
@@ -401,7 +403,6 @@ h6 {
   font-weight: 600;
   line-height: 163px;
   color: #fff;
-}
 }
 
 #hero h2 {
@@ -581,11 +582,6 @@ section {
   display: inline-block;
   padding: 15px 0;
   filter: grayscale(100);
-  padding-right: 31px;
-}
-
-
-
 }
 
 .cliens img:hover {
@@ -606,11 +602,12 @@ section {
   margin: 0;
   width: 100vw;
   height: 100vh;
+  background: #03a9f4;
 }
 
-video {
+.video-section {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   margin-bottom: 15px;
 }
 
@@ -1427,14 +1424,12 @@ video {
   .faq .faq-list {
     padding: 0;
   }
-} 
+}
 
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
-/* .contact.row{
 
-} */
 .contact .info {
   border-top: 3px solid #47b2e4;
   border-bottom: 3px solid #47b2e4;
