--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -115,34 +115,6 @@ h6 {
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
-#header {
-  transition: all 0.5s;
-  z-index: 997;
-  padding: 15px 0;
-}
-
-#header.header-scrolled,
-#header.header-inner-pages {
-  background: rgba(40, 58, 90, 0.9);
-}
-
-#header .logo {
-  font-size: 30px;
-  margin: 0;
-  padding: 0;
-  line-height: 1;
-  font-weight: 500;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-}
-
-#header .logo a {
-  color: #fff;
-}
-
-#header .logo img {
-  max-height: 40px;
-}
 
 /*--------------------------------------------------------------
 # Navigation Menu
@@ -273,6 +245,9 @@ h6 {
     left: -100%;
   }
 }
+.logo me-auto {
+  float: left;
+}
 
 /**
 * Mobile Navigation 
@@ -389,12 +364,13 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-
+  margin-top: -62px;
   background: #37517e;
+  display: flex;
 }
 
 #hero .container {
-  padding-top: 72px;
+  margin-top: -96px;
 }
 
 #hero h1 {
@@ -404,8 +380,11 @@ h6 {
   line-height: 188px;
   color: #fff;
   float: left;
-  margin-left: -20%;
-  padding-bottom: 150px;
+  margin-left: -21%;
+  padding-bottom: 16px;
+}
+.zenia-logo {
+  margin-top: 118px;
 }
 
 #hero h2 {
@@ -551,7 +530,7 @@ section {
   display: block;
   width: 120px;
   height: 1px;
-  background: #ddd;
+  background: #37517e;
   bottom: 1px;
   left: calc(50% - 60px);
 }
@@ -604,6 +583,8 @@ section {
 .wrapper {
   margin: 0;
   width: 100vw;
+  margin-top: -9vh;
+
   height: 100vh;
   background: #03a9f4;
 }
@@ -612,6 +593,7 @@ section {
   width: 100%;
   height: 100vh;
   margin-bottom: 15px;
+  margin-top: 5px;
 }
 
 /*--------------------------------------------------------------
