--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -380,7 +380,7 @@ h6 {
   line-height: 188px;
   color: #fff;
   float: left;
-  margin-left: -21%;
+  margin-left: -47%;
   padding-bottom: 16px;
 }
 .zenia-logo {
@@ -582,18 +582,17 @@ section {
 
 .wrapper {
   margin: 0;
-  width: 100vw;
+  width: 100%;
   margin-top: -9vh;
 
-  height: 100vh;
-  background: #03a9f4;
+  height: 100%;
 }
 
 .video-section {
   width: 100%;
-  height: 100vh;
-  margin-bottom: 15px;
-  margin-top: 5px;
+  height: 100%;
+  margin-bottom: -64px;
+  margin-top: 10px;
 }
 
 /*--------------------------------------------------------------
