--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -377,6 +377,7 @@ h6 {
   margin: -53px 308px 28px 0;
   font-size: 12.5em;
   font-weight: 500;
+  font-family: 'Roboto', sans-serif;
   line-height: 188px;
   color: #fff;
   float: left;
