--- a/src/components/Review.css
+++ b/src/components/Review.css
@@ -34,10 +34,11 @@ header {
   background: white;
   text-decoration: none;
   color: #444;
+
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  min-height: 100px;
   position: relative;
   top: 0;
   transition: all 0.4s ease-in-out;
@@ -114,6 +115,36 @@ span {
   }
 }
 
-.read-more-btn {
-  padding-top: 14px;
+/* .read-more-btn {
+  display: inline-block;
+  padding-top: 20px;
+  background-color: blue;
+  margin-top: 33px;
+
+  color: #f5f7f8;
+  padding: 0.6rem 1.5rem;
+  font-size: 1rem;
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.read-more-btn:hover {
+  background-color: gray;
+  transform: translateY(-3px);
+}
+
+ .colon { 
+  
+} */
+/* 
+span #colon {
+  color: blue;
+} */
+
+.card_read_more {
+  line-height: 26px;
+}
+.author {
+  color: pink;
 }
