--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1659,7 +1659,7 @@ section {
 --------------------------------------------------------------*/
 #footer {
   font-size: 14px;
-  background: linear-gradient(120deg, #37517e, #bd24b8);
+  background: linear-gradient(to right, #058ad6 0%, #62b4f7 100%);
   margin-top: 100px;
 }
 
